--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body{
     font-family: 'Montserrat', sans-serif;
 }
+.header-section{
+    display: flex;
+}
+.header-area{
+    width: 50%;
+}
+.header-area img{
+    width: 80%;
+}
