--- a/style.css
+++ b/style.css
@@ -1,12 +1,56 @@
 body{
+    padding: 0;
+    margin: 0;
     font-family: 'Montserrat', sans-serif;
+    cursor: zoom-in;
 }
+
 .header-section{
     display: flex;
 }
-.header-area{
+.header-area01{
+    width: 50%; 
+}
+.header-area02{
     width: 50%;
 }
-.header-area img{
-    width: 80%;
+.header-area02 img{
+    width: 76%;
+    margin-left: 11%;
+}
+.header-area01 h2{
+    margin-left: 10%;
+    font-size: 50px; 
+}
+.header-area01 h3{
+    margin-left: 10%;
+    font-size: 40px;
+}
+.header-area01 h4{
+    margin-left: 10%;
+    font-size: 20px;
+}
+.header-area01 p{
+    margin-left: 10%;
+}
+.header-area01 span{
+    color: rgb(255, 0, 132);
+}
+.header-area01 img{
+    width: 8%;
+}
+.header-area01 a{
+    display: block;
+    margin-left: 10%;
+    width: 18%; 
+    text-decoration: none;
+    color: #fff;
+    background-color: rgb(255, 0, 132);
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border: 1px solid rgb(255, 0, 132);
+    border-radius: 3px;
+
+
 }
