--- a/style.css
+++ b/style.css
@@ -35,9 +35,6 @@ body{
 .header-area01 span{
     color: rgb(255, 0, 132);
 }
-.header-area01 img{
-    width: 8%;
-}
 .header-area01 a{
     display: block;
     margin-left: 10%;
@@ -65,7 +62,7 @@ body{
     position: relative;
 }
 .middle-area01 img{
-    width: 85%;
+    width: 80%;
     margin-left: 11%;
 }
 h1{
@@ -93,6 +90,18 @@ h1{
     padding-bottom: 10px;
     border: 1px solid rgb(255, 0, 132);
     border-radius: 3px;
+}
+.footer-section{
+    display:flex;
+}
+.footer-area01{
+    margin-top: 20%;
+}
+.footer-area02{
+    margin-top: 20%; 
+}
+.footer-section h1{
+    margin-top: 15%;
 }
 
 
