--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ h1{
     font-size: 50px;
 }
 .middle-area02 p{
-    width: 92%;
+    width: 90%;
 }
 
 .middle-area02 img{
@@ -94,15 +94,28 @@ h1{
 .footer-section{
     display:flex;
 }
-.footer-area01{
+h1{
     margin-top: 20%;
 }
+
+.footer-area01{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    width: 600px;
+    height: 400px;
+    
+}
 .footer-area02{
-    margin-top: 20%; 
+    width: 600px;
+    height: 400px;
+    margin-left: 10%;
 }
-.footer-section h1{
-    margin-top: 15%;
+.footer-area01 h2{
+    margin-left: 22%;
 }
-
-
-
+.footer-area01 h6{
+    margin-left: 22%;
+}
+.footer-area01 p{
+    margin-left: 22%;
+}
