--- a/style.css
+++ b/style.css
@@ -98,24 +98,42 @@ h1{
     margin-top: 20%;
 }
 
-.footer-area01{
-    background-image: url("images/exp-bg.png");
-    background-repeat: no-repeat;
-    width: 600px;
-    height: 400px;
-    
+.box{
+    width: 500px;
+    height: 300px;
+    text-align: left;
+    border: 2px solid rgb(247, 247, 243);
+    box-shadow: 5px 5px 5px;
+    border-left: 8px solid rgb(255, 140, 0);
 }
-.footer-area02{
-    width: 600px;
-    height: 400px;
+.box2{
+    width: 500px;
+    height: 300px;
     margin-left: 10%;
+    text-align: left;
+    border: 2px solid rgb(250, 250, 247);
+    box-shadow: 10px 10px 10px;
+    border-left: 8px solid rgb(44, 6, 82);
 }
-.footer-area01 h2{
-    margin-left: 22%;
+.box h2{
+    margin-left: 15%;
 }
-.footer-area01 h6{
-    margin-left: 22%;
+.box h6{
+    margin-left: 15%;
 }
-.footer-area01 p{
-    margin-left: 22%;
+.box p{
+    margin-left: 15%;
+    font size: 20px;
+    line-height: 22px;
+}
+.box2 p{
+    font size: 20px;
+    line-height: 22px;
+    margin-left: 15%;
+}
+.box2 h6{
+    margin-left: 15%;
+}
+.box2 h2{
+    margin-left: 15%;
 }
