--- a/style.css
+++ b/style.css
@@ -102,8 +102,8 @@ h1{
     width: 500px;
     height: 300px;
     text-align: left;
-    border: 2px solid rgb(247, 247, 243);
-    box-shadow: 5px 5px 5px;
+    border: 2px solid rgb(240, 13, 13);
+    box-shadow: 5px 5px 5px 5px;
     border-left: 8px solid rgb(255, 140, 0);
 }
 .box2{
@@ -111,8 +111,8 @@ h1{
     height: 300px;
     margin-left: 10%;
     text-align: left;
-    border: 2px solid rgb(250, 250, 247);
-    box-shadow: 10px 10px 10px;
+    border: 2px solid rgb(245, 245, 9);
+    box-shadow: 5px 5px 5px 5px;
     border-left: 8px solid rgb(44, 6, 82);
 }
 .box h2{
@@ -136,4 +136,9 @@ h1{
 }
 .box2 h2{
     margin-left: 15%;
+}
+.entity p{
+    font-size: 18px;
+    margin-top: 15%;
+    margin-left: 40%;
 }
